# Gestor-de-Gastos

./: .gitignore  README.md  build_output.txt  dev.ps1  index.html  package-lock.json  package.json  tsc_errors.txt  vite.config.ts
public/: splashscreen.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: accounts.rs  categories.rs  import_data.rs  mod.rs  reports.rs  transaction.rs
src/components/Badge/: Badge.module.css  Badge.tsx
src/components/ConfirmWindow/: DeleteWindow.css  DeleteWindow.tsx
src/components/EmptyState/: EmptyState.module.css  EmptyState.tsx
src/components/Modal/: Modal.module.css  Modal.tsx
src/components/SelectButton/: SelectButton.module.css  SelectButton.tsx
src/components/ToggleSwitch/: ToggleSwitch.module.css  ToggleSwitch.tsx
src/features/accounts/components/: AccountCard.tsx  AccountModal.tsx  Accounts.tsx
src/features/accounts/hooks/: useAccounts.ts
src/features/accounts/services/: accountsService.ts
src/features/accounts/styles/: AccountCard.module.css  Accounts.module.css
src/features/calculator/components/: CalculatorPopover.tsx
src/features/calculator/styles/: CalculatorPopover.module.css
src/features/categories/components/: Categories.tsx  CategoryChip.tsx  CategoryModal.tsx
src/features/categories/hooks/: useCategories.ts
src/features/categories/services/: categoriesService.ts
src/features/categories/styles/: CategoryChip.module.css  CategoryModal.module.css
src/features/dashboard/components/: BalanceCard.tsx  Dashboard.tsx  (+1 more)
src/services/: AppContext.tsx  types.ts
(+36 files in other folders)
