[package]
name = "gestor-gastos"
version = "0.1.0"
description = "Gestor de Gastos Personal"
authors = ["you"]
edition = "2021"

[lib]
name = "gestor_gastos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
csv = "1.4"
calamine = "0.34"
tauri-plugin-dialog = "2.2.0"
